--- a/app/render/src/components/InputBar.scss
+++ b/app/render/src/components/InputBar.scss
@@ -2,6 +2,7 @@
   height: 60px;
   position: relative;
   z-index: 100;
+  -webkit-app-region: drag;
   .prefix {
     background: #bbb;
     padding: 6px 10px;
