--- a/render/src/App.scss
+++ b/render/src/App.scss
@@ -1,10 +1,6 @@
 @import "./style/common.scss";
 
 * {
-  font-family: BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji
-}
-.item-list {
-  max-height: 432px;
-  overflow: auto;
-  scroll-snap-type: y mandatory;
+  font-family: BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+  overflow-x: hidden;
 }
