--- a/render/src/components/InputBar.scss
+++ b/render/src/components/InputBar.scss
@@ -1,19 +1,22 @@
 .input-bar {
-  height: 60px;
+  height: 48px;
+  min-height: 48px;
+  max-height: 48px;
   position: relative;
   z-index: 100;
   -webkit-app-region: drag;
-  .prefix {
-    background: #bbb;
-    padding: 6px 10px;
-    font-size: 24px;
-    font-weight: bold;
-    height: 100%;
-    box-sizing: border-box;
+  .input-bar-wrapper {
+    position: fixed;
+    height: 48px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #fff;
   }
   input {
     height: 42px;
-    font-size: 26px;
+    min-height: 42px;
+    font-size: 28px;
     padding: 0 10px;
     width: 100%;
     box-sizing: border-box;
