--- a/render/src/components/ListItem.scss
+++ b/render/src/components/ListItem.scss
@@ -1,14 +1,20 @@
 .item-image-wrapper {
   width: 60px;
-  height: 60px;
+  height: 48px;
   margin-right: 3px;
   img {
-    width: 42px;
-    height: 42px;
+    width: 36px;
+    height: 36px;
   }
 }
 .list-item {
   scroll-snap-align: start;
+}
+.item-title {
+  font-size: 16px;
+}
+.item-subtitle {
+  font-size: 12px;
 }
 .list-item.selected {
   background: #bbb;
