feat: 输入框使用每日一句, 修复状态栏不能自适应的问题

--- a/render/src/components/InputBar.scss
+++ b/render/src/components/InputBar.scss
@@ -23,5 +23,11 @@
     outline: none;
     border: none;
     background: none;
+    &::placeholder {
+      font-size: 20px;
+      font-weight: normal;
+      position: relative;
+      top: -2px;
+    }
   }
 }
