feat: 添加剪切板插件

--- a/render/src/App.scss
+++ b/render/src/App.scss
@@ -1,6 +1,8 @@
 @import "./style/common.scss";
 
 * {
-  font-family: BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+  font-family: PingFangSC-Regular,Tahoma,Microsoft Yahei,sans-serif;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
