--- a/render/src/components/ListItem.scss
+++ b/render/src/components/ListItem.scss
@@ -12,9 +12,12 @@
 }
 .item-title {
   font-size: 16px;
+  font-weight: normal;
 }
 .item-subtitle {
   font-size: 12px;
+  font-weight: normal;
+  opacity: 0.6;
 }
 .list-item.selected {
   background: #bbb;
