--- a/render/public/global.css
+++ b/render/public/global.css
@@ -2,7 +2,7 @@ body {
 	color: #333;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: 'Noto Sans SC', sans-serif;
 }
 
 * {
@@ -36,4 +36,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+::-webkit-scrollbar {
+  width: 0;
 }
