--- a/render2/src/components/InputBar/index.module.css
+++ b/render2/src/components/InputBar/index.module.css
@@ -16,6 +16,30 @@
   display: flex;
   align-items: center;
 }
+.inputBarWrapper::after {
+  content: " ";
+  height: 1px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #efefef;
+}
+.navBack {
+  font-size: 16px;
+  height: 100%;
+  width: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #efefef;
+  cursor: pointer;
+}
+.backIcon {
+  width: 20px;
+  height: 20px;
+}
 .input {
   height: 42px;
   min-height: 42px;
@@ -26,8 +50,6 @@
   outline: none;
   border: none;
   background: none;
-}
-.input:placeholder-shown {
   -webkit-app-region: drag;
 }
 .input::placeholder {
@@ -40,6 +62,7 @@
 .appLogo {
   width: 36px;
   height: auto;
-  margin-right: 12px;
   cursor: pointer;
+  padding: 6px;
+  background-color: #efefef;
 }
