--- a/render2/src/index.css
+++ b/render2/src/index.css
@@ -3,8 +3,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-weight: 500;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+	color: #444;
 }
 
 code {
@@ -13,10 +15,8 @@ code {
 }
 
 body {
-	color: #333;
 	margin: 0;
 	box-sizing: border-box;
-  font-family: 'Noto Sans SC', sans-serif;
 }
 
 * {
