--- a/render2/src/components/ResultItem/index.module.css
+++ b/render2/src/components/ResultItem/index.module.css
@@ -9,7 +9,7 @@
   transition: all .2s;
 }
 .resultItem.selected {
-  background: #cbcbcb;
+  background: #bbbbbb;
 }
 .itemImageWrapper {
   width: 48px;
