feat: 添加新的插件

--- a/render2/src/components/InputBar/index.module.css
+++ b/render2/src/components/InputBar/index.module.css
@@ -45,19 +45,17 @@
 .input {
   height: 42px;
   min-height: 42px;
-  font-size: 28px;
+  font-size: 18px;
   padding: 0 10px;
   min-width: 4em;
   box-sizing: border-box;
   outline: none;
   border: none;
   background: none;
+  field-sizing: content;
 }
 .input::placeholder {
-  font-size: 20px;
   font-weight: normal;
-  position: relative;
-  top: -2px;
 }
 .searchSpace {
   flex: 1;
