--- a/render2/src/components/ResultItem/index.module.css
+++ b/render2/src/components/ResultItem/index.module.css
@@ -5,11 +5,11 @@
   height: 54px;
   max-width: 100%;
   content-visibility: auto;
-  contains-intrinsic-size: 60px;
-  transition: all .2s;
+  contains-intrinsic-size: 54px;
+  transition: all .1s;
 }
 .resultItem.selected {
-  background: #bbbbbb;
+  background: #e2e2e2;
 }
 .itemImageWrapper {
   width: 48px;
@@ -38,4 +38,8 @@
   opacity: 0.6;
   height: 16px;
   white-space: pre;
+}
+.actionIcon {
+  font-size: 16px;
+  color: #ccc;
 }
