--- a/render2/src/components/ResultItemPreview/index.module.css
+++ b/render2/src/components/ResultItemPreview/index.module.css
@@ -8,7 +8,7 @@
   overflow: auto;
 }
 .previewWrapper {
-  padding: 12px;
+  padding: 12px 0 12px 12px;
   box-sizing: border-box;
   height: 100%;
 }
