feat: 优化一些问题

--- a/render2/src/components/ResultItem/index.module.css
+++ b/render2/src/components/ResultItem/index.module.css
@@ -8,8 +8,11 @@
   contains-intrinsic-size: 54px;
   transition: all .1s;
 }
+.resultItem:hover {
+  background-color: light-dark(#e7e7e7, #393939);
+}
 .resultItem.selected {
-  background: #e2e2e2;
+  background-color: light-dark(#e2e2e2, #2a2a2a);
 }
 .itemImageWrapper {
   width: 48px;
