--- a/render2/src/components/InputBar/index.module.css
+++ b/render2/src/components/InputBar/index.module.css
@@ -24,7 +24,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.06);
+  background-color: light-dark(rgba(0, 0, 0, 0.06), rgba(255, 255, 255, 0.06));
 }
 .navBack {
   font-size: 16px;
@@ -34,6 +34,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  font-size: 22px;
 }
 .backIcon {
   width: 20px;
