--- a/render2/src/components/ResultItem/index.module.css
+++ b/render2/src/components/ResultItem/index.module.css
@@ -7,6 +7,8 @@
   content-visibility: auto;
   contains-intrinsic-size: 54px;
   transition: all .1s;
+  padding-left: 12px;
+  box-sizing: border-box;
 }
 .resultItem:hover {
   background-color: light-dark(#e7e7e7, #393939);
@@ -15,17 +17,17 @@
   background-color: light-dark(#e2e2e2, #2a2a2a);
 }
 .itemImageWrapper {
-  width: 48px;
-  height: 48px;
-  margin-right: 3px;
+  width: 36px;
+  height: 36px;
+  margin-right: 6px;
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 48px;
+  min-width: 36px;
 }
 .itemImageWrapper img {
-  width: 42px;
-  height: 42px;
+  width: 100%;
+  height: 100%;
 }
 .itemInfo {
   max-width: calc(100% - 80px);
