--- a/render2/src/components/ResultItem/index.module.css
+++ b/render2/src/components/ResultItem/index.module.css
@@ -7,7 +7,7 @@
   content-visibility: auto;
   contains-intrinsic-size: 54px;
   transition: all .1s;
-  padding-left: 12px;
+  padding: 0 12px;
   box-sizing: border-box;
 }
 .resultItem:hover {
@@ -30,7 +30,9 @@
   height: 100%;
 }
 .itemInfo {
-  max-width: calc(100% - 80px);
+  width: 0;
+  /* max-width: calc(100% - 90px); */
+  flex: 1;
 }
 .itemTitle {
   font-size: 14px;
@@ -47,4 +49,20 @@
 .actionIcon {
   font-size: 16px;
   color: #ccc;
+}
+.shortcutList {
+  display: flex;
+  flex-shrink: 0;
+  justify-content: flex-end;
+  margin-left: 12px;
+}
+.shortcutItem {
+  background: #e0e0e0;
+  height: 20px;
+  width: 20px;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 4px;
+  font-size: 12px;
+  margin-left: 2px;
 }
