--- a/render2/src/components/ResultItem/index.module.css
+++ b/render2/src/components/ResultItem/index.module.css
@@ -57,7 +57,7 @@
   margin-left: 12px;
 }
 .shortcutItem {
-  background: #e0e0e0;
+  background: light-dark(#e0e0e0, #3e3e3e);
   height: 20px;
   width: 20px;
   text-align: center;
