--- a/render2/src/components/InputBar/index.module.css
+++ b/render2/src/components/InputBar/index.module.css
@@ -56,8 +56,12 @@
   outline: none;
   border: none;
   background: none;
-  field-sizing: content;
+  /* field-sizing: content; */
   font-weight: 500;
+  flex: 1;
+}
+.input:focus {
+  -webkit-app-region: drag;
 }
 .input::placeholder {
   font-weight: normal;
